<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @author Christian Schaf
  ~ @author Roman Quistler
  ~ @author Nassim Bendida
  ~
  ~ Date: 27.6.2017
  ~ Copyright (c) by Hochschule Bremen
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="CREATE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtDish"
        android:layout_width="219dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblTableNumber"
        app:layout_constraintTop_toBottomOf="@+id/txtWaitressNumber" />

    <EditText
        android:id="@+id/txtWaitressNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblTableNumber"
        app:layout_constraintTop_toBottomOf="@+id/txtTableNumber" />

    <EditText
        android:id="@+id/txtTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblTableNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="Table Number:"
        app:layout_constraintBottom_toBottomOf="@+id/txtTableNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblWaitressNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Waitress ID:"
        app:layout_constraintBottom_toBottomOf="@+id/txtWaitressNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTableNumber" />

    <TextView
        android:id="@+id/lblDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Dish"
        app:layout_constraintBottom_toBottomOf="@+id/txtDish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWaitressNumber" />
</android.support.constraint.ConstraintLayout>