...
        android:layout_height="21dp"
        android:gravity="center"
        android:labelFor="@+id/txtFinalPrice"
        android:text="Total Price:"
        app:layout_constraintStart_toStartOf="@+id/lblDate"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/order_detail_dish_list"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <TextView
        android:id="@+id/txtFinalPrice"
        android:layout_width="wrap_content"
...
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblWaitressId"></android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
