<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @author Christian Schaf
  ~ @author Roman Quistler
  ~ @author Nassim Bendida
  ~
  ~ Date: 27.6.2017
  ~ Copyright (c) by Hochschule Bremen
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dish_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical" />
</LinearLayout>